changed site metadata and added my face as icon xoxo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Rupert Carr",
+  "name": "Rupert Carr Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
